--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         <div class="section-title">
           <h2>Certificate</h2>
-          <p>Here are some of my Certificate of Achievement. Big&Small</p>
+          <p>Here's some of my Certificate of Achievement. Big&Small</p>
         </div>
 
         <div class="row" data-aos="fade-up">
